package com.sda.patterns.behavioral.strategy.ex1;

public class BinarySearch implements SearchStrategy {

	@Override
	public String search(String input) {
		System.out.println("list is binary searched");
		return null;
	}
}