package com.sda.patterns.behavioral.strategy.ex1;

public interface SearchStrategy {

	String search(String input);
}