package com.sda.patterns.behavioral.strategy.ex1;

import java.util.List;

public interface SortStrategy {

	void sort(List<String> list);
}
